crates/test-files/fixtures/compile_errors/indexed_event.fe
struct MyEvent {
    #indexed
    pub addr1: address
    #indexed
    pub addr2: address
    #indexed
    pub addr3: address
    #indexed
    pub addr4: address
}

contract Foo {
}
